--- a/main.ipynb
+++ b/main.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,10 +62,10 @@
     "n_episodes = 20\n",
     "n_steps = 128\n",
     "    # Training parameters\n",
-    "agent_batch_size = 1\n",
+    "agent_batch_size = 128\n",
     "learning_rate = 0.01\n",
     "learning_rate_decay = 0.8\n",
-    "entropy_coef = 0.2\n",
+    "entropy_coef = 1\n",
     "    # Bellman equation\n",
     "future_discount = 0.8\n",
     "    # Update Target Model\n",
@@ -79,16 +79,16 @@
     "env_height = 2\n",
     "space = Box(env_width, env_height)\n",
     "    # Goal box size and center\n",
-    "goal_width = 0.2\n",
-    "goal_height = 0.2\n",
+    "goal_width = 0.3\n",
+    "goal_height = 0.3\n",
     "goal_center = np.tile([0.5,0],(agent_batch_size,1))\n",
     "goal = Box(goal_width, goal_height, goal_center)\n",
     "    # Time step size\n",
     "dt = 0.0375\n",
     "    # Noise\n",
-    "noise_characteristic_length = 1\n",
+    "noise_characteristic_length = 10\n",
     "    # Maximum of potential\n",
-    "U0 = 0\n",
+    "U0 = 0.0\n",
     "\n",
     "# ---------------- Agent ----------------------\n",
     "state_dim = 4\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,31 +135,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def update(agent, target_agent, memory_batch):\n",
-    "    state_now = memory_batch['state_now']\n",
-    "    state_next = memory_batch['state_next']\n",
-    "    action_now = memory_batch['action_now']\n",
-    "    reward = memory_batch['reward']\n",
-    "    done = memory_batch['done']\n",
+    "    state_now = memory_batch['state_now'].reshape(-1, state_dim)\n",
+    "    state_next = memory_batch['state_next'].reshape(-1, state_dim)\n",
+    "    action_now = memory_batch['action_now'].reshape(-1, act_dim)\n",
+    "    reward = memory_batch['reward'].reshape(-1)\n",
+    "    done = memory_batch['done'].reshape(-1)\n",
     "    action_next, log_prob_next = agent.actor(state_next)\n",
     "    \n",
     "    # Compute Prediction\n",
     "    Q1_now = agent.critic1(state_now, action_now)\n",
     "    Q2_now = agent.critic2(state_now, action_now)\n",
-    "    Q_now = tr.min(Q1_now, Q2_now)\n",
     "\n",
     "    # Compute Target\n",
     "    Q1_next = target_agent.critic1(state_next, action_next)\n",
     "    Q2_next = target_agent.critic2(state_next, action_next)\n",
     "    Q_next = tr.min(Q1_next, Q2_next)\n",
-    "    Target = reward + future_discount*(Q_next - entropy_coef*log_prob_next)\n",
-    "     \n",
+    "    Target = reward + future_discount*(1-done)*(Q_next - entropy_coef*log_prob_next)\n",
+    "\n",
     "    # Compute Loss\n",
-    "    loss = loss_function(Q_now, Target)\n",
+    "    loss = loss_function(Q1_now, Target) + loss_function(Q2_now, Target)\n",
     "    \n",
     "    # Update\n",
     "    loss.backward()\n",
@@ -172,13 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def episode():    \n",
     "    environment.init_state(agent_batch_size, state_dim)\n",
     "    for current_step in range(n_steps):\n",
+    "        # Log state\n",
     "        logger.save_state(environment.state)\n",
     "        if current_step%target_model_update == 0 and current_step > memory_size:\n",
     "            update_target_agent(agent, target_agent)\n",
@@ -191,17 +191,19 @@
     "        state_next = environment.state\n",
     "        # Done\n",
     "        done = environment.goal_check()\n",
-    "        # Store in memory\n",
-    "        memory.store(state_now, action_now, reward, state_next, done)\n",
-    "\n",
+    "        # Log action\n",
     "        logger.save_action(action_now.detach().cpu().numpy())\n",
     "\n",
+    "        loss = 0\n",
     "        # Sample from memory\n",
     "        if memory.size >= memory_batch_size:\n",
     "            memory_batch = memory.sample_batch(memory_batch_size)\n",
     "            # Update Agent\n",
-    "            loss = update(agent, target_agent, memory_batch)\n",
-    "            logger.save_loss(loss.item())\n",
+    "            loss = update(agent, target_agent, memory_batch).item()\n",
+    "            logger.save_loss(loss)\n",
+    "        \n",
+    "        # Store in memory\n",
+    "        memory.store(state_now, action_now, reward, state_next, loss, done)\n",
     "\n",
     "        if max(environment.goal_check()): \n",
     "            print('Goal reached')\n",
@@ -213,33 +215,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Goal reached\n",
       "Episode 0  finished!\n",
       "Episode 1  finished!\n",
       "Episode 2  finished!\n",
       "Episode 3  finished!\n",
       "Episode 4  finished!\n",
       "Episode 5  finished!\n",
+      "Goal reached\n",
       "Episode 6  finished!\n",
       "Episode 7  finished!\n",
+      "Goal reached\n",
       "Episode 8  finished!\n",
       "Episode 9  finished!\n",
+      "Goal reached\n",
       "Episode 10  finished!\n",
       "Episode 11  finished!\n",
       "Episode 12  finished!\n",
-      "Episode 13  finished!\n",
-      "Episode 14  finished!\n",
-      "Episode 15  finished!\n",
-      "Episode 16  finished!\n",
-      "Episode 17  finished!\n",
-      "Episode 18  finished!\n",
       "Goal reached\n",
+      "Episode 13  finished!\n",
+      "Goal reached\n",
+      "Episode 14  finished!\n",
+      "Goal reached\n",
+      "Episode 15  finished!\n",
+      "Goal reached\n",
+      "Episode 16  finished!\n",
+      "Goal reached\n",
+      "Episode 17  finished!\n",
+      "Goal reached\n",
+      "Episode 18  finished!\n",
       "Episode 19  finished!\n"
      ]
     },
