--- a/main.ipynb
+++ b/main.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,27 +49,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------------- Training -------------------\n",
     "    # Memory\n",
-    "memory_size = 800\n",
-    "memory_batch_size = 32\n",
+    "memory_size = 3000\n",
+    "memory_batch_size = 512\n",
     "    # Duration of training\n",
     "runs = 1\n",
-    "n_episodes = 20\n",
-    "n_steps = 128\n",
+    "n_episodes = 50\n",
+    "n_steps = 256\n",
     "    # Training parameters\n",
     "agent_batch_size = 128\n",
-    "learning_rate = 0.01\n",
+    "learning_rate = 0.005\n",
     "learning_rate_decay = 0.8\n",
-    "entropy_coef = 1\n",
+    "entropy_coef = 10\n",
     "    # Bellman equation\n",
     "future_discount = 0.8\n",
     "    # Update Target Model\n",
-    "target_model_update = 16\n",
+    "target_model_update = 32\n",
     "    # Loss Function\n",
     "loss_function = nn.MSELoss()\n",
     "\n",
@@ -84,15 +84,15 @@
     "goal_center = np.tile([0.5,0],(agent_batch_size,1))\n",
     "goal = Box(goal_width, goal_height, goal_center)\n",
     "    # Time step size\n",
-    "dt = 0.0375\n",
+    "dt = 0.04\n",
     "    # Noise\n",
     "noise_characteristic_length = 10\n",
     "    # Maximum of potential\n",
-    "U0 = 0.0\n",
+    "U0 = 0.5\n",
     "\n",
     "# ---------------- Agent ----------------------\n",
     "state_dim = 4\n",
-    "hidden_dims = [16,16]\n",
+    "hidden_dims = [16,16,16]\n",
     "act_dim = 1\n",
     "act_positive = True\n",
     "act_scaling = 2*np.pi\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
     "agent = SACAgent(state_dim, act_dim, hidden_dims, act_scaling, act_positive).float().to(device)\n",
     "target_agent = SACAgent(state_dim, act_dim, hidden_dims, act_scaling, act_positive).float().to(device)\n",
     "logger = RLLogger()\n",
-    "plotter = RLPlotter(logger)\n",
+    "plotter = RLPlotter(logger, goal)\n",
     "\n",
     "agent.actor_optimizer = tr.optim.Adam(agent.actor.parameters(), lr=learning_rate)\n",
     "agent.critic1_optimizer = tr.optim.Adam(agent.critic1.parameters(), lr=learning_rate)\n",
@@ -135,43 +135,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def update(agent, target_agent, memory_batch):\n",
+    "    agent.critic1_optimizer.zero_grad()\n",
+    "    agent.critic2_optimizer.zero_grad()\n",
+    "\n",
     "    state_now = memory_batch['state_now'].reshape(-1, state_dim)\n",
     "    state_next = memory_batch['state_next'].reshape(-1, state_dim)\n",
     "    action_now = memory_batch['action_now'].reshape(-1, act_dim)\n",
     "    reward = memory_batch['reward'].reshape(-1)\n",
     "    done = memory_batch['done'].reshape(-1)\n",
-    "    action_next, log_prob_next = agent.actor(state_next)\n",
     "    \n",
     "    # Compute Prediction\n",
     "    Q1_now = agent.critic1(state_now, action_now)\n",
     "    Q2_now = agent.critic2(state_now, action_now)\n",
     "\n",
     "    # Compute Target\n",
-    "    Q1_next = target_agent.critic1(state_next, action_next)\n",
-    "    Q2_next = target_agent.critic2(state_next, action_next)\n",
-    "    Q_next = tr.min(Q1_next, Q2_next)\n",
-    "    Target = reward + future_discount*(1-done)*(Q_next - entropy_coef*log_prob_next)\n",
-    "\n",
+    "    with tr.no_grad():        \n",
+    "        action_next, log_prob_next = agent.actor(state_next)\n",
+    "        \n",
+    "        Q1_next = target_agent.critic1(state_next, action_next)\n",
+    "        Q2_next = target_agent.critic2(state_next, action_next)\n",
+    "        Q_next = tr.min(Q1_next, Q2_next)\n",
+    "        target = reward + future_discount*(Q_next - entropy_coef*log_prob_next)\n",
     "    # Compute Loss\n",
-    "    loss = loss_function(Q1_now, Target) + loss_function(Q2_now, Target)\n",
+    "    loss = loss_function(Q1_now, target) + loss_function(Q2_now, target)\n",
     "    \n",
+    "    # print(f'Target: {target.mean()}')\n",
+    "    # print(f'Q1_now: {Q1_now.mean()}')\n",
+    "    # print(f'Q2_now: {Q2_now.mean()}')\n",
+    "    # print(f'Loss: {loss}')\n",
+    "    # print(f'loss_function(Q1_now, target): {loss_function(Q1_now, target)}')\n",
+    "    # print(f'loss_function(Q2_now, target): {loss_function(Q2_now, target)}')\n",
+    "    # print('-----------------')\n",
+    "    # print(f'Reward: {reward[0]}')\n",
+    "    # print(f'Done: {done[0]}')\n",
+    "    # print(f'Q_next: {Q_next[0]}')\n",
+    "    # print(f'Q1_next: {Q1_next[0]}')\n",
+    "    # print(f'Q2_next: {Q2_next[0]}')\n",
+    "    # print(f'Future_discount*Q_next: {future_discount*Q_next[0]*(1-done[0])}')\n",
+    "    # print(f'Entropy: {future_discount*(1-done[0])*entropy_coef*log_prob_next[0]}')\n",
+    "    # print('-----------------')\n",
     "    # Update\n",
     "    loss.backward()\n",
     "    agent.critic1_optimizer.step()\n",
     "    agent.critic2_optimizer.step()\n",
+    "    \n",
+    "    agent.actor_optimizer.zero_grad()\n",
+    "    for p in agent.critic1.parameters():\n",
+    "        p.requires_grad = False\n",
+    "    for p in agent.critic2.parameters():\n",
+    "        p.requires_grad = False\n",
+    "    \n",
+    "    action_now_L, log_prob_now_L = agent.actor(state_now)\n",
+    "    Q1_now_L = agent.critic1(state_now, action_now_L)\n",
+    "    Q2_now_L = agent.critic2(state_now, action_now_L)\n",
+    "    Q_now_L = tr.min(Q1_now_L, Q2_now_L)\n",
+    "    loss_L = (entropy_coef*log_prob_now_L - Q_now_L).mean()\n",
+    "    loss_L.backward()\n",
     "    agent.actor_optimizer.step()\n",
+    "\n",
+    "    for p in agent.critic1.parameters():\n",
+    "        p.requires_grad = True\n",
+    "    for p in agent.critic2.parameters():\n",
+    "        p.requires_grad = True\n",
     "\n",
     "    return loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,53 +252,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Goal reached\n",
       "Episode 0  finished!\n",
+      "Goal reached\n",
       "Episode 1  finished!\n",
       "Episode 2  finished!\n",
-      "Episode 3  finished!\n",
-      "Episode 4  finished!\n",
-      "Episode 5  finished!\n",
-      "Goal reached\n",
-      "Episode 6  finished!\n",
-      "Episode 7  finished!\n",
-      "Goal reached\n",
-      "Episode 8  finished!\n",
-      "Episode 9  finished!\n",
-      "Goal reached\n",
-      "Episode 10  finished!\n",
-      "Episode 11  finished!\n",
-      "Episode 12  finished!\n",
-      "Goal reached\n",
-      "Episode 13  finished!\n",
-      "Goal reached\n",
-      "Episode 14  finished!\n",
-      "Goal reached\n",
-      "Episode 15  finished!\n",
-      "Goal reached\n",
-      "Episode 16  finished!\n",
-      "Goal reached\n",
-      "Episode 17  finished!\n",
-      "Goal reached\n",
-      "Episode 18  finished!\n",
-      "Episode 19  finished!\n"
+      "Episode 3  finished!\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 960x720 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
