Changed Update Variable names

--- a/main.ipynb
+++ b/main.ipynb
@@ -150,22 +150,22 @@
     "    done = memory_batch['done'].reshape(-1)\n",
     "    \n",
     "    # Compute Prediction\n",
-    "    Q1_now = agent.critic1(state_now, action_now)\n",
-    "    Q2_now = agent.critic2(state_now, action_now)\n",
+    "    Q1_now_critic = agent.critic1(state_now, action_now)\n",
+    "    Q2_now_critic = agent.critic2(state_now, action_now)\n",
     "\n",
     "    # Compute Target\n",
     "    with tr.no_grad():        \n",
-    "        action_next, log_prob_next = agent.actor(state_next)\n",
+    "        action_next_critic, log_prob_next_critic = agent.actor(state_next)\n",
     "        \n",
-    "        Q1_next = target_agent.critic1(state_next, action_next)\n",
-    "        Q2_next = target_agent.critic2(state_next, action_next)\n",
-    "        Q_next = tr.min(Q1_next, Q2_next)\n",
-    "        target = reward + future_discount*(Q_next - entropy_coef*log_prob_next)\n",
+    "        Q1_next_critic = target_agent.critic1(state_next, action_next_critic)\n",
+    "        Q2_next_critic = target_agent.critic2(state_next, action_next_critic)\n",
+    "        Q_next_critic = tr.min(Q1_next_critic, Q2_next_critic)\n",
+    "        target_critic = reward + future_discount*(Q_next_critic - entropy_coef*log_prob_next_critic)\n",
     "    # Compute Loss\n",
-    "    loss = loss_function(Q1_now, target) + loss_function(Q2_now, target)\n",
+    "    loss_critic = loss_function(Q1_now_critic, target_critic) + loss_function(Q2_now_critic, target_critic)\n",
     "    \n",
     "    # Update\n",
-    "    loss.backward()\n",
+    "    loss_critic.backward()\n",
     "    agent.critic1_optimizer.step()\n",
     "    agent.critic2_optimizer.step()\n",
     "    \n",
@@ -175,11 +175,11 @@
     "    for p in agent.critic2.parameters():\n",
     "        p.requires_grad = False\n",
     "    \n",
-    "    action_now_new, log_prob_now_new = agent.actor(state_now)\n",
-    "    Q1_now_new = agent.critic1(state_now, action_now_new)\n",
-    "    Q2_now_new = agent.critic2(state_now, action_now_new)\n",
-    "    Q_now_new = tr.min(Q1_now_new, Q2_now_new)\n",
-    "    loss_actor = (entropy_coef*log_prob_now_new - Q_now_new).mean()\n",
+    "    action_now_actor, log_prob_now_actor = agent.actor(state_now)\n",
+    "    Q1_now_actor = agent.critic1(state_now, action_now_actor)\n",
+    "    Q2_now_actor = agent.critic2(state_now, action_now_actor)\n",
+    "    Q_now_actor = tr.min(Q1_now_actor, Q2_now_actor)\n",
+    "    loss_actor = (entropy_coef*log_prob_now_actor - Q_now_actor).mean()\n",
     "    loss_actor.backward()\n",
     "    agent.actor_optimizer.step()\n",
     "\n",
@@ -188,7 +188,7 @@
     "    for p in agent.critic2.parameters():\n",
     "        p.requires_grad = True\n",
     "\n",
-    "    return loss, loss_actor"
+    "    return loss_critic, loss_actor"
    ]
   },
   {
